--- a/cn/index.html
+++ b/cn/index.html
@@ -99,8 +99,8 @@
                         </a>
                         <ul>
                             <li>
-                                <a href="#发现产品" class="smooth">
-                                    <span class="title">发现产品</span>
+                                <a href="#世界品牌" class="smooth">
+                                    <span class="title">世界品牌</span>
                                 </a>
                             </li>
                             <li>
