--- a/en/index.html
+++ b/en/index.html
@@ -98,8 +98,8 @@
                         </a>
                         <ul>
                             <li>
-                                <a href="#Product" class="smooth">
-                                    <span class="title">Product</span>
+                                <a href="#big brand" class="smooth">
+                                    <span class="title">big brand</span>
                                 </a>
                             </li>
                             <li>
