--- a/cn/index.html
+++ b/cn/index.html
@@ -457,7 +457,7 @@
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://ap.louisvuitton.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://ap.louisvuitton.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="../assets/images/logos/producthunt.png" class="lozad img-circle" width="40">
+                                <img data-src="../assets/images/logos/louis vuitton.png" class="lozad img-circle" width="40">
                             </a>
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
