--- a/cn/index.html
+++ b/cn/index.html
@@ -462,7 +462,7 @@
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>louisvuitton</strong>
+                                    <strong>路易 威登</strong>
                                 </a>
                                 <p class="overflowClip_2">顶级一线女士奢侈品牌</p>
                             </div>
