--- a/en/index.html
+++ b/en/index.html
@@ -509,7 +509,7 @@
                                 <a href="#" class="xe-user-name overflowClip_1">
                                     <strong>louis vuitton</strong>
                                 </a>
-                                <p class="overflowClip_2">发现新鲜有趣的产品</p>
+                                <p class="overflowClip_2">顶级一线女士奢侈品牌</p>
                             </div>
                         </div>
                     </div>
